--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -70,7 +70,7 @@ $colors: map-merge(
   $colors
   );
 
-$primary:       #FFF288 !default;
+$primary:       #DD4A48 !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
