--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -1,10 +1,12 @@
+$primary-text-color: #FFF288;
+$secondary-text-color:#89a;
 .header-bar {
 	float: left;
 	width: 250px;
 	height: 100vh;
 	min-height: 400px;
 	overflow: auto;
-	background: $white;
+	/* background: $white; */
 	background: $global_bg_color;
 	padding: 30px;
 	text-align: left;
@@ -26,14 +28,15 @@
 			margin-bottom: 0;
 		}
 		a {
-			font-size: 20px;
-			color: $black;
+			font-size: 15px;
+			color: $secondary-text-color;
 			text-transform: uppercase;
-			font-weight: bold;
+			font-weight: 400;
+			border-radius: 5px;
 
 			display: inline-block;
 			padding: 5px 10px;
-			border: 4px solid $black;
+			border: 3px solid $secondary-text-color;
 		}
 	}
 	.main-menu {
@@ -59,19 +62,20 @@
 			a {
 				display: block;
 				padding: 4px 0;
-				color: $black;
+				color: $secondary-text-color;
 				text-transform: uppercase;
 				font-size: .8rem;
-				font-weight: 600;
+				font-weight: 400;
 				position: relative;
 				padding-left: 10px;
 				&:before {
-					transition: .3s all ease;
+					/* transition: .3s all ease; */
 					content: "";
 					position: absolute;
 					left: 0px;
-					top: 0;
-					width: 4px;
+					top: 6px;
+					width: 3px;
+					height: 20px;
 					bottom: 0;
 					background: $primary;
 					opacity: 0;
@@ -79,6 +83,9 @@
 				}
 				@include media-breakpoint-down(md) {
 					padding: 4px 10px;
+				}
+				&:hover {
+					color: $primary-text-color;
 				}
 				&.active {
 					color: $primary;
@@ -119,6 +126,7 @@
 .main-content {
 	float: right;
 	width: calc(100% - 250px);
+	background: $global_bg_color;
 	@include media-breakpoint-down(md) {
 		width: 100%;
 		position: relative;
@@ -149,7 +157,7 @@
 				top: 0;
 				background: rgba($global_bg_color,.9);
 				z-index: 1;
-				transition: .3s all ease;
+				/* transition: .3s all ease; */
 				opacity: 0;
 				visibility: hidden;
 			}
@@ -161,7 +169,7 @@
 				width: 100%;
 				transform: translate(-50%, -50%);
 				margin-top: 30px;
-				transition: .3s all ease;
+				/* transition: .3s all ease; */
 				opacity: 0;
 				visibility: hidden;
 				text-align: center;
@@ -187,7 +195,7 @@
 				height: 300px;
 				margin-bottom: 0;
 				margin-bottom: $grid-gutter-width;
-				transition: .3s all ease;
+				/* transition: .3s all ease; */
 				transform: scale(1.0);
 				@include media-breakpoint-down(xs) {
 					height: 200px;
@@ -287,7 +295,7 @@
 		z-index: 1;
 	}
 	&, .row {
-		height: 90vh;
+		height: 100vh;
 		min-height: 500px;
 		z-index: 2;
 		position: relative;
@@ -308,6 +316,7 @@
 
 .site-section {
 	padding: 7em 0;
+	background: $global_bg_color;
 	&.darken-bg {
 		background: lighten($black, 10%);
 		position: relative;
@@ -371,7 +380,7 @@
 					height: 7px;
 					border-radius: 50%;
 					background: darken($global_bg_color, 15%);
-					transition: .3s all ease;
+					/* transition: .3s all ease; */
 				}
 				&.active {
 					span {
@@ -405,7 +414,7 @@
 			border-radius: 50%;	
 			transform: translateY(-50%);
 			background: darken($global_bg_color, 5%);
-			transition: .3s all ease-in-out;
+			/* transition: .3s all ease-in-out; */
 			
 			line-height: 0;
 			text-align: center;
