--- a/scss/bootstrap/_carousel.scss
+++ b/scss/bootstrap/_carousel.scss
@@ -75,7 +75,7 @@
 .carousel-fade {
   .carousel-item {
     opacity: 0;
-    transition-duration: .6s;
+    /* transition-duration: .6s; */
     transition-property: opacity;
   }
 
