--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,8 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
-$global_bg_color: #F5EEDC;
-/* Base */
+$global_bg_color: #23252E;
+/* Basesss */
 @import "site-base";
 /* Navbar */
 @import "site-navbar";
