--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,12 @@
 @import "bootstrap/mixins";
 
 $global_bg_color: #23252E;
+$primary-text-color: #FFF288;
+$secondary-text-color:#c2cfdb;
+$body-text-color: #95a6b6;
+$header-text-color:#e5f4ff;
+
+
 /* Basesss */
 @import "site-base";
 /* Navbar */
