--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -1,5 +1,3 @@
-$primary-text-color: #FFF288;
-$secondary-text-color:#89a;
 .header-bar {
 	float: left;
 	width: 250px;
@@ -155,7 +153,7 @@ $secondary-text-color:#89a;
 				right: 0;
 				bottom: 0;
 				top: 0;
-				background: rgba($global_bg_color,.9);
+				background: rgba($white, .075);
 				z-index: 1;
 				/* transition: .3s all ease; */
 				opacity: 0;
@@ -195,7 +193,7 @@ $secondary-text-color:#89a;
 				height: 300px;
 				margin-bottom: 0;
 				margin-bottom: $grid-gutter-width;
-				/* transition: .3s all ease; */
+				transition: .3s all ease;
 				transform: scale(1.0);
 				@include media-breakpoint-down(xs) {
 					height: 200px;
@@ -217,6 +215,19 @@ $secondary-text-color:#89a;
 			}
 		}
 	}
+}
+
+.fancybox-caption {
+	padding: 1% 44px !important;
+	line-height: 0.5;
+	&:after {
+		/* display: none; */
+		width: 50px;
+	}
+}
+
+.fancybox-slide--image {
+	padding: 3% 0;
 }
 
 .site-mobile-menu {
@@ -334,7 +345,7 @@ $secondary-text-color:#89a;
 		// text-transform: uppercase;
 		font-size: 3rem;
 		margin-bottom: 1em;
-		color: $black;
+		color: $header-text-color;
 		@include media-breakpoint-down(md) {
 			font-size: 2.5rem;
 		}
