--- a/scss/bootstrap/_images.scss
+++ b/scss/bootstrap/_images.scss
@@ -37,6 +37,6 @@
 }
 
 .figure-caption {
-  font-size: $figure-caption-font-size;
+  font-size: $-caption-font-size;
   color: $figure-caption-color;
 }
