--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ a:hover {
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   color: #c2cfdb;
+  font-family: "Space Grotesk";
 }
 
 .border-2 {
@@ -525,7 +526,7 @@ h1, h2, h3, h4, h5,
   right: 0;
   z-index: 2000;
   padding-top: 20px;
-  background: #23252E;
+  background: linear-gradient(-90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
   height: 100vh;
   transform: translateX(110%);
   box-shadow: -10px 0 20px -10px rgba(0, 0, 0, 0.1);
@@ -701,7 +702,8 @@ h1, h2, h3, h4, h5,
   min-height: 400px;
   overflow: auto;
   /* background: $white; */
-  background: #23252E;
+  /* background: $global_bg_color; */
+  background: linear-gradient(90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
   padding: 30px;
   text-align: left;
   position: fixed;
@@ -728,14 +730,15 @@ h1, h2, h3, h4, h5,
   }
 }
 .header-bar .site-logo a {
-  font-size: 15px;
+  font-family: "Mohave";
+  font-size: 24px;
   color: #c2cfdb;
   text-transform: uppercase;
   font-weight: 400;
-  border-radius: 5px;
   display: inline-block;
-  padding: 5px 10px;
-  border: 3px solid #c2cfdb;
+  padding: 5px 10px 5px 0;
+  /* border-radius: 5px; */
+  /* border: 2px solid $secondary-text-color; */
 }
 .header-bar .main-menu {
   margin-right: auto;
@@ -922,7 +925,7 @@ h1, h2, h3, h4, h5,
 }
 .fancybox-caption:after {
   /* display: none; */
-  width: 50px;
+  /* width: 50px; */
 }
 
 .fancybox-slide--image {
@@ -988,7 +991,7 @@ h1, h2, h3, h4, h5,
   right: 0;
   bottom: 0;
   top: 0;
-  background: rgba(0, 0, 0, 0.4);
+  /* background: rgba(0,0,0,.4); */
   z-index: 1;
 }
 .site-section-hero, .site-section-hero .row {
