--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -5,7 +5,8 @@
 	min-height: 400px;
 	overflow: auto;
 	/* background: $white; */
-	background: $global_bg_color;
+	/* background: $global_bg_color; */
+	background: linear-gradient(90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
 	padding: 30px;
 	text-align: left;
 	position: fixed;
@@ -26,15 +27,16 @@
 			margin-bottom: 0;
 		}
 		a {
-			font-size: 15px;
+			font-family: "Mohave";
+			font-size: 24px;
 			color: $secondary-text-color;
 			text-transform: uppercase;
 			font-weight: 400;
-			border-radius: 5px;
 
 			display: inline-block;
-			padding: 5px 10px;
-			border: 3px solid $secondary-text-color;
+			padding: 5px 10px 5px 0;
+			/* border-radius: 5px; */
+			/* border: 2px solid $secondary-text-color; */
 		}
 	}
 	.main-menu {
@@ -222,7 +224,7 @@
 	line-height: 0.5;
 	&:after {
 		/* display: none; */
-		width: 50px;
+		/* width: 50px; */
 	}
 }
 
@@ -302,7 +304,7 @@
 		position: absolute;
 		content: "";
 		left: 0; right: 0; bottom: 0; top: 0;
-		background: rgba(0,0,0,.4);
+		/* background: rgba(0,0,0,.4); */
 		z-index: 1;
 	}
 	&, .row {
