--- a/scss/_site-navbar.scss
+++ b/scss/_site-navbar.scss
@@ -183,7 +183,7 @@
 	right: 0;
 	z-index: 2000;
 	padding-top: 20px;
-	background: $global_bg_color;
+	background: linear-gradient(-linear-gradient(90deg, rgba(57,31,9,1) 0%, rgba(245,222,179,1) 95%)90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
 	height: calc(100vh);
 	
 	transform: translateX(110%);
