--- a/css/style.css
+++ b/css/style.css
@@ -700,7 +700,7 @@ h1, h2, h3, h4, h5,
   width: 250px;
   height: 100vh;
   min-height: 400px;
-  overflow: auto;
+  overflow: hidden;
   /* background: $white; */
   /* background: $global_bg_color; */
   background: linear-gradient(90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
@@ -937,7 +937,7 @@ h1, h2, h3, h4, h5,
 }
 .grid .grid-sizer,
 .grid .grid-item {
-  width: 33%;
+  width: 32.6666666667%;
 }
 .grid .grid-item {
   padding: 5px;
@@ -952,13 +952,13 @@ h1, h2, h3, h4, h5,
 @media (max-width: 768px) {
   .grid .grid-sizer,
   .grid .grid-item {
-    width: 49.5%;
+    width: 49%;
   }
 }
 @media (max-width: 480px) {
   .grid .grid-sizer,
   .grid .grid-item {
-    width: 99%;
+    width: 98%;
   }
 }
 
