--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -3,7 +3,7 @@
 	width: 250px;
 	height: 100vh;
 	min-height: 400px;
-	overflow: auto;
+	overflow: hidden;
 	/* background: $white; */
 	/* background: $global_bg_color; */
 	background: linear-gradient(90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
@@ -243,7 +243,7 @@ $columns-mobile: 1;
 
 // Function to calculate column width based on the number of columns
 @function column-width($columns) {
-  @return (99% / $columns );
+  @return calc(98% / $columns );
 }
 
 // Masonry Grid Styles
