--- a/scss/_site-base.scss
+++ b/scss/_site-base.scss
@@ -30,7 +30,7 @@ a {
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
 	color: $secondary-text-color;
-	font-family: "Space Grotesk"
+	font-family: "News Gothic Std";
 }
 
 .border-2 {
