--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a:hover {
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   color: #c2cfdb;
-  font-family: "Space Grotesk";
+  font-family: "News Gothic Std";
 }
 
 .border-2 {
@@ -697,7 +697,7 @@ h1, h2, h3, h4, h5,
 /* Blocks */
 .header-bar {
   float: left;
-  width: 250px;
+  width: 220px;
   height: 100vh;
   min-height: 400px;
   overflow: hidden;
@@ -705,6 +705,7 @@ h1, h2, h3, h4, h5,
   /* background: $global_bg_color; */
   background: linear-gradient(90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
   padding: 30px;
+  padding-right: 0px;
   text-align: left;
   position: fixed;
   left: 0;
@@ -824,7 +825,7 @@ h1, h2, h3, h4, h5,
 
 .main-content {
   float: right;
-  width: calc(100% - 250px);
+  width: calc(100% - 220px);
   background: #23252E;
 }
 @media (max-width: 991.98px) {
@@ -919,6 +920,12 @@ h1, h2, h3, h4, h5,
   visibility: visible;
 }
 
+.fancybox-image {
+  /* margin: 3rem; */
+  border: clamp(1px, 0.3vw, 5px) solid #ddd;
+  border-radius: 2px;
+}
+
 .fancybox-caption {
   padding: 1% 44px !important;
   line-height: 0.5;
@@ -943,13 +950,16 @@ h1, h2, h3, h4, h5,
   padding: 5px;
   box-sizing: border-box;
 }
+.grid .grid-item a {
+  width: 100%;
+}
 .grid .grid-item img {
   display: block;
   width: 100%;
   height: auto;
   object-fit: contain;
 }
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .grid .grid-sizer,
   .grid .grid-item {
     width: 49%;
@@ -1047,6 +1057,7 @@ h1, h2, h3, h4, h5,
 
 .site-section {
   padding: 7em 0;
+  max-width: 2500px;
   background: #23252E;
 }
 .site-section.darken-bg {
