--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -1,6 +1,6 @@
 .header-bar {
 	float: left;
-	width: 250px;
+	width: 220px;
 	height: 100vh;
 	min-height: 400px;
 	overflow: hidden;
@@ -8,6 +8,7 @@
 	/* background: $global_bg_color; */
 	background: linear-gradient(90deg, rgb(22, 23, 24) 0%, rgb(35, 37, 46) 93%);
 	padding: 30px;
+	padding-right: 0px;
 	text-align: left;
 	position: fixed;
 	left: 0;
@@ -125,7 +126,7 @@
 
 .main-content {
 	float: right;
-	width: calc(100% - 250px);
+	width: calc(100% - 220px);
 	background: $global_bg_color;
 	@include media-breakpoint-down(md) {
 		width: 100%;
@@ -219,6 +220,12 @@
 	}
 }
 
+.fancybox-image {
+	/* margin: 3rem; */
+	border: clamp(1px, 0.3vw, 5px) solid #ddd;
+	border-radius: 2px;
+}
+
 .fancybox-caption {
 	padding: 1% 44px !important;
 	line-height: 0.5;
@@ -262,6 +269,10 @@ $columns-mobile: 1;
     padding: $grid-padding;
     box-sizing: border-box;
 
+	a {
+		width: 100%;
+	}
+
     // Remove float
     // float: left;
 
@@ -277,7 +288,7 @@ $columns-mobile: 1;
   }
 
   // Responsive Adjustments
-  @media (max-width: 768px) {
+  @media (max-width: 1200px) {
     .grid-sizer,
     .grid-item {
       width: column-width($columns-tablet); // Columns for tablet
@@ -391,6 +402,7 @@ $columns-mobile: 1;
 
 .site-section {
 	padding: 7em 0;
+	max-width: 2500px;
 	background: $global_bg_color;
 	&.darken-bg {
 		background: lighten($black, 10%);
