Fixed mobile sizing of fancybox caption

--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -221,22 +221,30 @@
 }
 
 .fancybox-image {
-	/* margin: 3rem; */
 	border: clamp(1px, 0.3vw, 5px) solid #ddd;
 	border-radius: 2px;
 }
 
 .fancybox-caption {
-	padding: 1% 44px !important;
-	line-height: 0.5;
-	&:after {
-		/* display: none; */
-		/* width: 50px; */
-	}
+	padding: 10px 44px !important;
+	/* line-height: 0.5; */
+	/* &:after { */
+	/* } */
+}
+
+.fancybox-stage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fancybox-slide--image {
 	padding: 3% 0;
+}
+
+.fancybox-content {
+  max-width: 98vw;  /* 98% of the viewport width */
+  width: 98vw;      /* Ensure the width is 98% of the viewport */
 }
 
 // Variables for common values
