--- a/scss/_site-base.scss
+++ b/scss/_site-base.scss
@@ -18,7 +18,7 @@ html {
 	color: $white;
 }
 a {
-	transition: .3s all ease;
+	/* transition: .3s all ease; */
 	position: relative;
 	display: inline-block;
 
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5,
 .site-wrap {
 	&:before {
 		display: none;
-		transition: .3s all ease-in-out;
+		/* transition: .3s all ease-in-out; */
 		background: rgba(0,0,0,.6);
 		content: "";
 		position: absolute;
